<resources>
    <string name="app_name">ReformfitApp</string>
    <string name="blg1_title">Muscle Hypertrophy vs Muscle Endurance</string>
    <string name="blg1_time">Posted on May 12, 2021 | In</string>
    <string name="blg1_tip">Exercises Tips</string>
    <string name="blg1_intro">In the fitness and weight-training world, people are often wondering how many reps of each exercise they should be doing or how heavy they should be lifting in order to achieve their goal. These goals often include muscle hypertrophy or muscle endurance. Understanding the difference between the two can help you decide which is right for you. </string>
    <string name="blg1_title1">Muscle Hypertrophy</string>
    <string name="blg1_text1">Muscle hypertrophy refers to an increase in your muscle mass overtime, in particular the physical size and strength of your muscles. For instance, measuring the circumference of your arms in week 1 of your training and seeing physical growth in measurement the following weeks is an indication of muscle hypertrophy. Exercises that help with muscle hypertrophy (growth) is by lifting heavier weights at least 2–3 days a week and alternating between upper-body and lower-body days. However, allowing your body recovery time in between is important because rest and recovery is essential for muscle growth. Lifting heavy weights consistently along with proper nutrition and lifestyle can help increase your overall physical body size.</string>
    <string name="blg1_title2">Muscle Endurance</string>
    <string name="blg1_text2">Muscle endurance is the ability of a muscle or group of muscles to perform a repeated activity for an extended period of time. Therefore, the higher your muscle endurance, the greater number of repetitions you could do in a particular exercise. For instance, on week 1 you were able to perform 15 push ups straight and on week 2 you can now complete 20 push ups straight. This is an indication of your muscle endurance improving. Lacking muscle endurance can be seen when your muscles tire out easily and a reduced amount of work those muscle groups can perform. Exercises that often involve muscle endurance include but not limited to: walking, cycling, resistance training, swimming, circuit training, holding a plank etc. </string>
    <string name="blg1_shTitle1">Type of Training</string>
    <string name="blg1_shTitle2">% of 1 Rep-Max(RM)*</string>
    <string name="blg1_shTitle3">Sets</string>
    <string name="blg1_shTitle4">Reps</string>
    <string name="blg1_shContent00">Hypertrophy</string>
    <string name="blg1_shContent01">Endurance</string>
    <string name="blg1_shContent10">60 – 75%</string>
    <string name="blg1_shContent11">50 – 60%</string>
    <string name="blg1_shContent20">3 – 5</string>
    <string name="blg1_shContent21">3</string>
    <string name="blg1_shContent30">8 – 12</string>
    <string name="blg1_shContent31">15 – 20</string>
    <string name="blg1_text3">
 <![CDATA[<font color=#dedede>One Rep Max</font><font color=#848484> : The maximum amount of weight you can lift from one single repetition of a certain exercise</font>]]>
  </string>
    <string name="blg1_text4">
 <![CDATA[<font color=#dedede>Example:</font><font color=#848484> 50% of 1 RM = RM x 0.5 will give you the weight you should be lifting at to improve muscle endurance. Complete 3 sets of 15-20 reps at 50% of your 1 Rep Max. Circuit training and HIIT workouts at ReformFIT is a great way to improve your muscle endurance. </font>]]>
  </string>
    <string name="blg1_text_ls">At ReformFIT, we offer a variety of classes with an extensive selection of fitness equipment and weights that can help you achieve your goals of muscle hypertrophy or muscle endurance! Our experienced instructors can help you figure out what exercise is best for your fitness goals.</string>
    <string name="blg2_title">Knee Hyperextension: What It is and How To Improve It</string>
    <string name="blg2_time">Posted on April 5, 2021 | In </string>
    <string name="blg2_tip">Exercises Tips</string>
    <string name="blg2_title1">WHAT IS IT?</string>
    <string name="blg2_text1"><![CDATA[<font color=#848484> Knee Hyperextension happens when the knee joint is </font><font color=#dedede>excessively straightened, resulting in high stress on the entire knee from the structure to the back of the knee joint.</font><font color=#848484> This occurs when the knee joint is bent the wrong way and too far backwards. This often occurs in individuals who perform high impact exercises or are athletes.</font>]]></string>
    <string name="blg2_title2">CAUSES</string>
    <string name="blg2_text2"><![CDATA[<font color=#848484> The cause of knee hyperextensions often occurs from high impact exercises that require </font><font color=#dedede>jumping and landing hard or abrupt stop</font> <font color=#848484> in running as well as contact sports. </font><font color=#dedede>Improper form during exercising</font><font color=#848484> and</font><font color=#dedede> awkward placement of your knees</font><font color=#848484>  can also increase risk of Knee Hyperextension.</font>]]></string>
    <string name="blg2_title3">SYMPTOMS</string>
    <string name="blg2_text3"><![CDATA[<font color=#848484> Some of the common symptoms of an Extended Knee include </font><font color=#dedede>localized knee pain, swelling, bruising, knee instability, limited knee movement and popping sound from knee joint.</font><font color=#848484>
        <br></br>
        <br></br>Knee hyperextension can range from a mild strain to a severe injury to the knee structure. It is important to provide immediate attention to prevent long-term injuries.]]></string>
    <string name="blg2_title4">HOW TO IMPROVE IT?</string>
    <string name="blg2_text4">If you are experiencing a Hyperextended Knee, you can follow the acronym, RICE that can provide you with some immediate relief.</string>
    <string name="blg2_title41">R – Rest</string>
    <string name="blg2_text41">Take a break from high intensity/impact training activities and allow the body to rest and recover. Ensure that swelling and pain subsides before resuming. You may perform gentle, low impact activities to keep the body moving during your recovery period.</string>
    <string name="blg2_title42">I – Ice</string>
    <string name="blg2_text42">Ice the affected knee for 15 minutes multiple times throughout the day. Ice can reduce inflammation by bringing down the swelling and help manage pain. Use a towel to cover ice to prevent direct skin contact, which can cause irritation and discomfort.</string>
    <string name="blg2_title43">C – Compress</string>
    <string name="blg2_text43">Provide compression to the affected knee to improve blood circulation that can help bring down swelling and pain further.</string>
    <string name="blg2_title44">E – Elevate</string>
    <string name="blg2_text44">Elevate your leg above heart level whenever possible. When sleeping, plop a pillow under your legs to allow elevation. </string>
    <string name="blg2_title5">LONG TERM PREVENTION</string>
    <string name="blg2_text5">To prevent Knee Hyperextension, it is important to be mindful of knee posture when performing everyday activities and exercises.
        \n
        \n\t\t\u2022Performing strengthening exercises regularly to improve knee flexors and extensors.
        \n\t\t\u2022Improving quads and hamstring muscles can also protect the knee joints.
        \n\t\t\u2022Strengthening your core muscles could also provide more stability and prevention of knee misplacement.
        \n\t\t\u2022Ensuring that you have an adequate warm up routine before high impact exercises and a good cool down afterwards.
        </string>
    <string name="blg2_title6">TRY IT OUT</string>
    <string name="blg2_text6"><![CDATA[<font color=#848484>Join one of our </font><font color=#dedede>workout classes today at ReformFIT that are lead by our experienced trainers </font></font><font color=#848484>to help you prevent and avoid Knee Hyperextension as we always provide proper form correction and clear directions.</font>]]></string>
    <string name="blg3_title">Strength Training and Effective Weight Loss</string>
    <string name="blg3_time">Posted on March 9, 2021In</string>
    <string name="blg3_tip">Exercises Tips</string>
    <string name="blg3_title1">STRENGTH TRAINING AND EFFECTIVE WEIGHT LOSS</string>
    <string name="blg3_text1"><![CDATA[<font color=#848484>Over the years, most people believed that doing intensive cardio is the only effective way for weight loss. However, new science has shown that effective healthy weight loss requires burning fat while gaining muscle mass and weight training is the way to achieve this. Well, you may say: </font><font color=#dedede>“I seem to burn more calories in a cardio workout versus a weight training workout.”</font><font color=#848484> Yes, you’re right! If you were to compare a 30-minute high intensity cardio to a 30-minute weight training session, you would most likely burn more calories for the same amount of time and effort. However, weight training provides more of the long-term benefits to weight loss rather than just the workout itself. For instance you are often times burning more calories after the workout from weight training than cardio.
        <br></br><br></br>Below are a few important benefits of weight training for weight loss.</font>]]></string>
    <string name="blg3_title2">AFTERBURN</string>
    <string name="blg3_text2"><![CDATA[<font color=#848484>A few posts back, we talked about what the</font><font color=#dedede> Afterburn</font><font color=#848484> Effect is and how when your <font/><font color=#dedede>EPOC, Excess Post Exercise Oxygen Consumption</font><font color=#848484> increases, it creates the Afterburn Effect resulting in an increased metabolic rate for up to 24 hours after your strength training workout, hence burning more calories! So, hitting the weight section at the gym can not only help you burn calories from the workout but you are greatly benefiting from the Afterburn Effect so essentially you are burning more calories and fat effectively to support your weight loss journey in the long run.</font>]]></string>
    <string name="blg3_title3">INCREASE LEAN MUSCLE MASS, BASAL METABOLIC RATE &amp; LONG TERM FAT LOSS</string>
    <string name="blg3_text3"><![CDATA[<font color=#848484>When consistently incorporating weight training into your exercise routine, it has shown that your lean muscle mass increases. </font><font color=#dedede>As we age, our lean muscle mass decreases and if we don’t do anything about it, we start to lose muscle and it will be replaced by fat.</font><font color=#848484> So without much diet changes, if you were to strength train consistently, it will be beneficial in weight loss and maintaining the body shape you want by building more muscle and preventing fat gain.</font>

        <br></br><br></br><font color=#848484>Another great benefit related to increased muscle mass is that </font><font color=#dedede>the more lean muscle mass you have, the greater your basal metabolic rate.</font><font color=#dedede> Your basal metabolic rate is the amount of calories your body burns naturally without moving your body. So if you weight train consistently, you will be burning more calories on your rest day, then the average person who does not weight train.</font>]]></string>
    <string name="blg3_title4">PREVENT OSTEOPOROSIS OR BONE CONDITIONS</string>
    <string name="dialog_bsdf_choose_payment_method">Please choose a payment method</string>
    <string name="dialog_bsdf_credit_card">信用卡</string>
    <string name="dialog_bsdf_direct_debit">借记卡</string>
    <string name="dialog_bsdf_cancel">取消</string>
</resources>