<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_bottom_sheet_heading"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/dialog_bsdf_choose_payment_method"
            android:textColor="@color/grey"
            android:textSize="16sp" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/dialog_bsdf_credit_card"
            android:textColor="@color/black"
            android:id="@+id/credit_card"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/dialog_bsdf_direct_debit"
            android:textColor="@color/black"
            android:id="@+id/debit_card"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@color/grey"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/dialog_bsdf_cancel"
            android:textColor="@color/black"
            android:id="@+id/cancel"/>



    </LinearLayout>
</com.google.android.material.card.MaterialCardView>